--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,17 +30,7 @@ jobs:
         cache: pip # Implicitly uses requirements.txt for cache key
 
     - name: Install dependencies
-      run: pip install -r requirements.txt
-
-    # (optional) Cache your executed notebooks between runs
-    # if you have config:
-    # execute:
-    #   execute_notebooks: cache
-    - name: cache executed notebooks
-      uses: actions/cache@v4
-      with:
-        path: _build/.jupyter_cache
-        key: jupyter-book-cache-${{ hashFiles('requirements.txt') }}
+      run: pip install -U jupyter-book
 
     # Build the book
     - name: Build the book
@@ -52,8 +42,3 @@ jobs:
       uses: actions/upload-pages-artifact@v3
       with:
         path: "_build/html"
-
-    # Deploy the book's HTML to GitHub Pages
-    - name: Deploy to GitHub Pages
-      id: deployment
-      uses: actions/deploy-pages@v4
