--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -2,15 +2,25 @@
 # Learn more at https://jupyterbook.org/customize/toc.html
 
 format: jb-book
-root: intro
+root: intro.md
 
-chapters:
-  - file: Tutorial_fdac
-  - part: Examples
+parts:
+  - caption: Get Started
+    chapters:
+    - file: Tutorial_fdac.ipynb
+  - caption: Examples
     chapters:
       - file: examples/HD26965_PCA_fd.ipynb
       - file: examples/HD3651_fdac.ipynb
       - file: examples/HD34411_fdac.ipynb
-  - file: notebooks
-  - file: markdown-notebooks
+
+#chapters:
+#  - file: Tutorial_fdac
+#  - part: Examples
+#    chapters:
+#      - file: examples/HD26965_PCA_fd.ipynb
+#      - file: examples/HD3651_fdac.ipynb
+#      - file: examples/HD34411_fdac.ipynb
+#  - file: notebooks
+#  - file: markdown-notebooks
 
