--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -13,6 +13,7 @@ parts:
       - file: examples/HD26965_PCA_fd.ipynb
       - file: examples/HD3651_fdac.ipynb
       - file: examples/HD34411_fdac.ipynb
+      - file: examples/Bootstrap_test.ipynb
 
 #chapters:
 #  - file: Tutorial_fdac
